fix(components/achiv-card): fix text whitespace and overflow

--- a/src/components/utils/achieve-card/achievecard.scss
+++ b/src/components/utils/achieve-card/achievecard.scss
@@ -283,7 +283,7 @@ a {
   & .card-title {
     text-align: center;
     font-size: clamp(30px, 2.1vw, 45px);
-    padding-left: 4%;
+    //padding-left: 4%;
     padding-top: 2%;
     padding-bottom: 1%;
     height: auto;
